* Reset the passed string on failure for BeOS compatibility. * Fixes #7701.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42200 a95241bf-73f2-0310-859d-f6bbb57e9c96